<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:text="@string/Q1"
            style="@style/QuizStyle" />
        <EditText
            android:id="@+id/Q1_input"
            style="@style/AnswerStyle"
            android:hint="Input your answer here"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:text="@string/Q2"
            style="@style/QuizStyle" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/Q2_A1"
                android:text="@string/q2_a1"
                style="@style/AnswerStyle"
                android:onClick="Q2buttonClicked"/>
            <RadioButton
                android:id="@+id/Q2_A2"
                android:text="@string/q2_a2"
                style="@style/AnswerStyle"
                android:onClick="Q2buttonClicked"/>
        </RadioGroup>

        <TextView
            android:text="@string/Q3"
            style="@style/QuizStyle" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/Q3_A1"
                android:text="@string/q3_a1"
                style="@style/AnswerStyle"
                android:onClick="Q3buttonClicked"
                />
            <RadioButton
                android:id="@+id/Q3_A2"
                android:text="@string/q3_a2"
                style="@style/AnswerStyle"
                android:onClick="Q3buttonClicked"
                />
        </RadioGroup>


        <TextView
            android:text="@string/Q4"
            style="@style/QuizStyle" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/Q4_A1"
                android:text="@string/q4_a1"
                style="@style/AnswerStyle"
                android:onClick="Q4buttonClicked"/>
            <RadioButton
                android:id="@+id/Q4_A2"
                android:text="@string/q4_a2"
                style="@style/AnswerStyle"
                android:onClick="Q4buttonClicked"/>
        </RadioGroup>


        <TextView
            android:text="@string/Q5"
            style="@style/QuizStyle" />
        <CheckBox
            android:id="@+id/Q5_A1"
            android:text="@string/q5_a1"
            style="@style/AnswerStyle"
            />
        <CheckBox
            android:id="@+id/Q5_A2"
            android:text="@string/q5_a2"
            style="@style/AnswerStyle"
            />
        <CheckBox
            android:id="@+id/Q5_A3"
            android:text="@string/q5_a3"
            style="@style/AnswerStyle"
             />

        <TextView
            android:id="@+id/summary_text_view"
            android:text=""
            style="@style/QuizStyle"
            android:gravity="center_horizontal"
            />

        <Button
            android:id="@+id/submit_button"
            android:text="Submit"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/my_button"
            android:onClick="submitAnswer" />



    </LinearLayout>

</ScrollView>
